SERVER-58909 Missing versions for admin and config databases migrating to version 4.2